// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletUpdate should not render if not open 1`] = `<DocumentFragment />`;

exports[`WalletUpdate should render 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 bGiJfU absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto overflow-hidden rounded-2xl bg-theme-background shadow-2xl "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="Button__StyledButton-mdtvtf-0 fHYGyx w-11 h-11"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Wallet Update 
        </h2>
        <div
          class="flex-1"
        >
          <svg
            class="my-8"
          >
            wallet-update.svg
          </svg>
          <div>
            <div
              data-testid="tab-pabel__active-panel"
            >
              <section
                data-testid="WalletUpdate__first-step"
              >
                <div
                  class="mb-8 text-center"
                >
                  <p
                    class="text-sm text-theme-secondary-text md:text-base"
                  >
                    We are pleased to announce that a new update has been released for your wallet. You can update now or postpone the update.
                  </p>
                </div>
              </section>
            </div>
            <div
              class="flex flex-col justify-center space-x-0 sm:flex-row sm:space-x-3"
            >
              <button
                class="Button__StyledButton-mdtvtf-0 iUSBMV mt-2 sm:mt-0"
                data-testid="WalletUpdate__cancel-button"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Update Later
                </div>
              </button>
              <button
                class="Button__StyledButton-mdtvtf-0 ePkfgQ"
                data-testid="WalletUpdate__update-button"
                type="button"
              >
                <div
                  class="flex relative items-center space-x-2"
                >
                  Update Now
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletUpdate should render 1st step 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletUpdate__first-step"
  >
    <div
      class="mb-8 text-center"
    >
      <p
        class="text-sm text-theme-secondary-text md:text-base"
      >
        We are pleased to announce that a new update has been released for your wallet. You can update now or postpone the update.
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletUpdate should render 2st step 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletUpdate__second-step"
  >
    <div
      class="flex w-2/5 mx-auto items-center"
    >
      <div
        class="flex-1"
      >
        <p
          class="text-sm font-semibold text-theme-secondary-400"
        >
          Downloading
        </p>
      </div>
      <div>
        <div
          class="flex justify-center"
        >
          <div
            class="animate-spin"
          >
            <svg
              height="50"
              viewBox="0 0 50 50"
              width="50"
            >
              <circle
                cx="25"
                cy="25"
                fill="transparent"
                r="22.5"
                stroke="var(--theme-color-success-200)"
                stroke-width="5"
              />
              <circle
                cx="25"
                cy="25"
                fill="transparent"
                r="22.5"
                stroke="var(--theme-color-success-600)"
                stroke-dasharray="141.3716694115407"
                stroke-dashoffset="113.09733552923255"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="5"
                transform="rotate(-90 25 25)"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletUpdate should render 2st step with progress status 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletUpdate__second-step"
  >
    <div
      class="flex w-2/5 mx-auto items-center"
    >
      <div
        class="flex-1"
      >
        <p
          class="text-sm font-semibold text-theme-secondary-400"
        >
          Downloaded
        </p>
        <p
          class="text-sm font-bold text-theme-secondary-text"
        >
          0 B / 0 B
        </p>
      </div>
      <div>
        <div
          class="flex justify-center"
        >
          <div
            class=""
          >
            <svg
              height="50"
              viewBox="0 0 50 50"
              width="50"
            >
              <circle
                cx="25"
                cy="25"
                fill="transparent"
                r="22.5"
                stroke="var(--theme-color-success-200)"
                stroke-width="5"
              />
              <circle
                cx="25"
                cy="25"
                fill="transparent"
                r="22.5"
                stroke="var(--theme-color-success-600)"
                stroke-dasharray="141.3716694115407"
                stroke-dashoffset="113.09733552923255"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="5"
                transform="rotate(-90 25 25)"
              />
              <text
                data-testid="CircularProgressBar__percentage"
                dy="0.3em"
                fill="var(--theme-color-success-600)"
                font-size="0.8rem"
                font-weight="600"
                text-anchor="middle"
                x="50%"
                y="50%"
              >
                <tspan>
                  20
                  <tspan
                    dy="-0.6em"
                    font-size="0.4rem"
                    font-weight="bold"
                  >
                    %
                  </tspan>
                </tspan>
              </text>
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletUpdate should render 3st step 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletUpdate__third-step"
  >
    <div
      class="mb-6 text-center"
    >
      <p
        class="text-sm text-theme-secondary-text md:text-base"
      >
        Update downloaded and ready to install
      </p>
    </div>
  </section>
</DocumentFragment>
`;
